--- a/seventhpage.html
+++ b/seventhpage.html
@@ -14,7 +14,7 @@
 		<h1> Government Engineering College Nowgong </h1>
 		  
          <div class="son">
-		 <a href="seventhpage.html"><img src= "images/nec-mono.png" alt="logo of NEC" style="width:70px; height:70px; margin:0px 10px 0px 0px"></a>
+		 <a href="seventhpage.html"><img src= "nec-mono.png" alt="logo of NEC" style="width:70px; height:70px; margin:0px 10px 0px 0px"></a>
 		<h3 style="display:inline; vertical-align:27px;"> NH-75 Jhansi Road </h3>
 	    </div>
     </header>
